Update src to v2.2.0

--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -10,24 +10,11 @@ $colors: (
   whitesmoke:     #f7f9f9,
   dark:       		#191d21,
   muted:          #98a6ad,
-  body:           #f4f6f9,
+  body:           #fafdfb,
   font:           #6c757d,
   fontdark:       #34395e,
-  white:          #ffffff,
-
-  // Form Control
-  formcontrol_normal_background:    #fdfdff,
-  formcontrol_normal_border:        #e4e6fc,
-  formcontrol_focus_background:     #fefeff,
-  formcontrol_focus_border:         #95a0f4,
-
-  // Utilities
-  section_title_line: #6777ef,
+  white:          #ffffff
 );
-
-$font_family:   'Nunito', 'Segoe UI', arial;
-$font_weight:   400;
-$font_size:     14px;
 
 $grid-breakpoints: (
   xs: 0,
