--- a/src/scss/override/_dropdown.scss
+++ b/src/scss/override/_dropdown.scss
@@ -4,7 +4,7 @@
 }
 
 .dropdown-menu {
-  @include shadow(0 10px 40px 0, rgba(51, 73, 94, 0.15));
+  @include shadow(0 0 30px);
   border: none;
   width: 200px;
   &.show {
