--- a/src/scss/theme/_misc.scss
+++ b/src/scss/theme/_misc.scss
@@ -1,4 +1,55 @@
-@import url('//fonts.googleapis.com/css?family=Nunito:400,600,700,800');
+/* nunito-regular - latin */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/nunito-v9-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Nunito Regular'), local('Nunito-Regular'),
+       url('../fonts/nunito-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v9-latin-regular.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-600 - latin */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/nunito-v9-latin-600.eot'); /* IE9 Compat Modes */
+  src: local('Nunito SemiBold'), local('Nunito-SemiBold'),
+       url('../fonts/nunito-v9-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v9-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v9-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v9-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v9-latin-600.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-700 - latin */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/nunito-v9-latin-700.eot'); /* IE9 Compat Modes */
+  src: local('Nunito Bold'), local('Nunito-Bold'),
+       url('../fonts/nunito-v9-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v9-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v9-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v9-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v9-latin-700.svg#Nunito') format('svg'); /* Legacy iOS */
+}
+/* nunito-800 - latin */
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/nunito-v9-latin-800.eot'); /* IE9 Compat Modes */
+  src: local('Nunito ExtraBold'), local('Nunito-ExtraBold'),
+       url('../fonts/nunito-v9-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/nunito-v9-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/nunito-v9-latin-800.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/nunito-v9-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/nunito-v9-latin-800.svg#Nunito') format('svg'); /* Legacy iOS */
+}
 
 :root {
   /* Colors */
@@ -12,15 +63,11 @@
   --dark: color(dark);
 }
 
-body, html {
-  min-height: 100%;
-}
-
 body {
   background-color: color(body);
-  font-size: $font_size;
-  font-weight: $font_weight;
-  font-family: $font_family;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: 'Nunito', 'Segoe UI', arial;
   color: color(font);
 }
 
@@ -125,10 +172,6 @@ a.bb {
   font-size: 14px;
   color: color(fontdark);
   font-weight: 600;
-}
-
-.text-muted-transparent {
-  color: rgba(255,255,255,.8);
 }
 
 .img-shadow {
@@ -322,61 +365,4 @@ pre {
   .icon-wrap {
     width: 100%;
   }
-}
-
-.background-walk-y {
-  @include background_walk;
-  background-size: 100%;
-}
-
-@include media-breakpoint-down(lg) {
-  .background-walk-y {
-    background-size: cover;
-  }
-}
-
-.background-walk-x {
-  @include background_walk(backgroundWalkX);
-}
-
-@keyframes backgroundWalkY {
-  0% {
-    background-position: 0 0%;
-  }
-  100% {
-    background-position: 0 100%;
-  }
-}
-
-@keyframes backgroundWalkX {
-  0% {
-    background-position: 0 0%;
-  }
-  100% {
-    background-position: 100% 0;
-  }
-}
-
-.overlay-gradient-bottom {
-  &:after {
-    @include overlay(1, false, linear-gradient(to bottom, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.65) 100%));
-  }
-}
-
-.overlay-gradient-top {
-  &:after {
-    @include overlay(1, false, linear-gradient(to top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.65) 100%));
-  }
-}
-
-.index-1 { z-index: 1 !important; }
-.index-2 { z-index: 2 !important; }
-.index-3 { z-index: 3 !important; }
-.index-4 { z-index: 4 !important; }
-.index-5 { z-index: 5 !important; }
-
-.absolute-bottom-left {
-  position: absolute;
-  left: 0;
-  bottom: 0;
 }
